kubernetes/civo/ingress-hello-world.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
  labels:
    app: hello-world
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-world
              servicePort: 5000
